[gd_scene load_steps=8 format=2]

[ext_resource path="res://Characters/Mobs/Spider/Art/New Piskel-1.png (6).png" type="Texture" id=1]
[ext_resource path="res://Characters/Mobs/Spider/Spider.gd" type="Script" id=2]
[ext_resource path="res://Utils/AwarenessZone.gd" type="Script" id=3]
[ext_resource path="res://Utils/HealthDisplay.tscn" type="PackedScene" id=4]
[ext_resource path="res://Utils/Hurtbox.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.41526
height = 10.6409

[sub_resource type="CircleShape2D" id=2]
radius = 59.0208

[node name="Spider" type="KinematicBody2D" groups=[
"Mob",
]]
collision_mask = 3
script = ExtResource( 2 )
max_health = 10

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource( 1 )

[node name="MoveTimer" type="Timer" parent="."]
autostart = true

[node name="AwarenessZone" type="Area2D" parent="."]
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="AwarenessZone"]
shape = SubResource( 2 )

[node name="HealthDisplay" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, -10.3034 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
rotation = -1.5708
shape = SubResource( 1 )

[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="body_entered" from="AwarenessZone" to="." method="_on_AwarenessZone_body_entered"]
[connection signal="body_exited" from="AwarenessZone" to="." method="_on_AwarenessZone_body_exited"]
[connection signal="on_got_hit" from="Hurtbox" to="." method="_on_Hurtbox_on_got_hit"]
